stylesheets/scss/grid.scss
/////////////////
// Semantic.gs // for SCSS: http://sass-lang.com/
/////////////////

// Defaults which you can freely override
$column-width: 60px;
$gutter-width: 20px;
$columns: 12;

// Utility function — you should never need to modify this
@function gridsystem-width($columns:$columns) {
	@return ($column-width * $columns) + ($gutter-width * $columns);
}

// Set $total-width to 100% for a fluid layout
$calculated-width: gridsystem-width($columns);
$total-width: $calculated-width;

// Convenience function for calculating the $total-width / $calculated-width.
@function gridsystem-ratio() {
  @return $total-width / $calculated-width;
}

// Uncomment these two lines and the star-hack width/margin lines below to enable sub-pixel fix for IE6 & 7. See http://tylertate.com/blog/2012/01/05/subpixel-rounding.html
// $min-width: 999999;
// $correction: 0.5 / $min-width * 100;

// The micro clearfix http://nicolasgallagher.com/micro-clearfix-hack/
@mixin clearfix() {
	*zoom:1;

	&:before,
	&:after {
	    content:"";
	    display:table;
	}
	&:after {
	    clear:both;
	}
}


//////////
// GRID //
//////////

body {
	width: 100%;
	@include clearfix();
}

@mixin row($c:$columns) {
	display: block;
	width: (($gutter-width + gridsystem-width($c)) * gridsystem-ratio());
	margin: 0 (-.5 * $gutter-width * gridsystem-ratio());
	// *width: (($gutter-width + gridsystem-width($c))*gridsystem-ratio())-$correction;
	// *margin: 0 (-.5 * $gutter-width * gridsystem-ratio())-$correction;
	@include clearfix();
}
@mixin column($x) {
	display: inline;
	float: left;
	width: (((($gutter-width+$column-width)*$x)-$gutter-width) * gridsystem-ratio());
	margin: 0 (($gutter-width*.5) * gridsystem-ratio());
	// *width: (((($gutter-width+$column-width)*$x)-$gutter-width) * gridsystem-ratio())-$correction;
	// *margin: 0 (($gutter-width*.5) * gridsystem-ratio())-$correction;
}
@mixin push($offset:1) {
	margin-left: (((($gutter-width+$column-width)*$offset) + ($gutter-width*.5)) * gridsystem-ratio());
}
@mixin pull($offset:1) {
	margin-right: (((($gutter-width+$column-width)*$offset) + ($gutter-width*.5)) * gridsystem-ratio());
}

